Bug 120097 - No document recovery dialog after a crash
Summary: No document recovery dialog after a crash
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 121295 (view as bug list)
Depends on:
Blocks: AutoSave-AutoRecovery-Backup
  Show dependency treegraph
 
Reported: 2018-09-23 21:09 UTC by Telesto
Modified: 2018-11-09 05:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Bibisect log (2.75 KB, text/plain)
2018-10-27 15:43 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-09-23 21:09:26 UTC
Description:
No document recovery dialog after a crash

Steps to Reproduce:
1. Open Draw
2. Kill LibreOffice or make it crash (at this point in time: properties deck, set background color from none to color

Actual Results:
Regular opening

Expected Results:
Recovery dialog


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 6.2.0.0.alpha0+
Build ID: d5a2202f955657e427670a87c2d4e5638884517b
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-09-12_02:38:23
Locale: nl-NL (nl_NL); Calc: CL
Comment 1 Xisco Faulí 2018-09-24 16:20:23 UTC
So, reproducing the crash from bug 117215, I don't see the recovery dialog in any bibisect repository, however, I see it with 

Versión: 6.1.1.2
Id. de compilación: 5d19a1bfa650b796764388cd8b33a5af1f5baa1b
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group threaded

I'm wondering if the recovery dialog is disabled in not release builds...
Comment 2 Xisco Faulí 2018-10-25 15:19:35 UTC
Hi Telesto,
Do you reproduce it in release builds ?
Comment 3 Telesto 2018-10-25 16:40:03 UTC
Repro with
Versie: 6.2.0.0.alpha1
Build ID: ff46ad24d1d3cbcea45895520483ed1fd4ff488b
CPU-threads: 4; Besturingssysteem: Windows 6.3; UI-render: GL; VCL: win; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 4 Telesto 2018-10-27 15:43:40 UTC
Created attachment 146078 [details]
Bibisect log

Bisected to:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-09-10 09:33:08 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-09-10 11:02:23 +0200
commit eb34a6a93fcdebe545ab267d7cc7c5c72bab22c8 (patch)
tree 85fc695ac34f3aaca5095a0e41006094c1fe3245
parent 663e09800b5bde6c3bfb8655628b4d08f040fedb (diff)
clang-tidy bugprone-virtual-near-miss in RecoveryDialog
warning: method 'svx::DocRecovery::RecoveryDialog::execute' has a
similar name and the same signature as virtual method 'Dialog::Execute';
did you mean to override it?

https://cgit.freedesktop.org/libreoffice/core/commit/?id=eb34a6a93fcdebe545ab267d7cc7c5c72bab22c8
Comment 5 Telesto 2018-10-29 15:43:56 UTC
@Buovjaga,
If you have some time :-). Or someone else I should ping.
Comment 6 Xisco Faulí 2018-10-29 15:46:48 UTC
Adding Cc: to Noel Grandin
Comment 7 Commit Notification 2018-10-30 06:24:00 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7598df03159c45eab011b15a47dc824676008f3d%5E%21

tdf#120097 Revert "clang-tidy bugprone-virtual-near-miss in RecoveryDialog"

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2018-10-31 13:49:57 UTC
@Telesto,
Could you please verify the fix with a master build? Thanks in advance
Comment 9 Telesto 2018-10-31 17:08:57 UTC
The crash dialog is working again :-). Thanks!

Version: 6.2.0.0.alpha1+
Build ID: 4fa9e6f7f891b335ae1b432e0848c1e46c8fe3ef
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-10-30_22:44:48
Locale: nl-NL (nl_NL); Calc: CL
Comment 10 Aron Budea 2018-11-09 05:51:18 UTC
*** Bug 121295 has been marked as a duplicate of this bug. ***