tdf#120097 Revert "clang-tidy bugprone-virtual-near-miss in RecoveryDialog"

This reverts commit eb34a6a93fcdebe545ab267d7cc7c5c72bab22c8.

Change-Id: Ife0cc2098ab49da97f73c65754b5d6a43bd0eece
Reviewed-on: https://gerrit.libreoffice.org/62519
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>